breadcrumbs wip + cleaning wip

--- a/_includes/credits.html
+++ b/_includes/credits.html
@@ -1,4 +1,4 @@
-{% assign credits-list = include.content | split: "," %}
+{% assign credits-list = include.content %}
 <div id="project-credits">
     <h2 class="mb-2">Credits</h2>
     <ul class="list-unstyled">
