--- a/_includes/projects/fired-up/one-page.html
+++ b/_includes/projects/fired-up/one-page.html
@@ -1,4 +1,4 @@
-<h3 class="mb-4">One Page</h3>
+<h3 class="mb-4">{% t fired-up.one-page.title %}</h3>
 <div class="row">
     <div class="col-12 col-md-6">
         <a href="/assets/images/fired_up/design_documents/One_Page_Burnout.png" id="pop">
@@ -6,19 +6,13 @@
                 src="/assets/images/fired_up/design_documents/One_Page_Burnout.webp" alt="Fired up one page">
         </a>
         <a class="badge bg-primary" href="/assets/images/fired_up/design_documents/One_Page_Burnout.png">
-            Click to enlarge
+            {% t click-to-enlarge %}
         </a>
     </div>
     <div class="col-12 col-md-6">
-        <h4>A reminder</h4>
-        <p>
-            The role of this one page is to have all <b>core mechanics</b> of the game
-            <b>synthetized in one poster</b> which is always <b>visible by the team</b>.
-        </p>
-        <h4>Feature Cuts</h4>
-        <p>
-            Some of the presented features were cut. We kept mechanics
-            that were the <b>most important</b> in building our goal experience.
-        </p>
+        <h4>{% t fired-up.one-page.reminder.title %}</h4>
+        <p>{% t fired-up.one-page.reminder.content %}</p>
+        <h4>{% t fired-up.one-page.cuts.title %}</h4>
+        <p>{% t fired-up.one-page.cuts.content %}</p>
     </div>
 </div>
