--- a/_includes/projects/spike/fast-prototyping.html
+++ b/_includes/projects/spike/fast-prototyping.html
@@ -1,18 +1,12 @@
-<h3 class="mb-4">Fast prototyping</h3>
+<h3 class="mb-4">{% t spike.fast-prototyping.title %}</h3>
 <div class="row">
     <div class="col-lg-6">
         <img class="d-block w-100 mb-5" src="/assets/images/spike/fast-prototyping/fast-prototyping-breakable.gif">
     </div>
     <div class="col-lg-6">
-        <h4>Prototyping 3Cs</h4>
-        <p>To be able to get a better grasp on our 3Cs as soon as possible,
-            <b>I prototyped some parts of our character controller and added gamefeel elements</b> such as
-            animations.
-        </p>
-        <h4>Toys</h4>
-        <p>
-            To <b>test our 3Cs and gamefeel early on</b>, we prototyped toys such as breakable objects that are
-            shown in the adjacent gif.
-        </p>
+        <h4>{% t spike.fast-prototyping.3Cs.title %}</h4>
+        <p>{% t spike.fast-prototyping.3Cs.content %}</p>
+        <h4>{% t spike.fast-prototyping.toys.title %}</h4>
+        <p>{% t spike.fast-prototyping.toys.content %}</p>
     </div>
 </div>
