Adding site.title refs & fixing 404 page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
             <li class="d-inline"><a class="badge bg-light text-dark" href="{{"/resume.pdf" | relative-url}}"><span class="nav-other-websites-desc bi bi-file-person"> {% t nav.resume %}</span></a></li>
           </ul>
         </div> 
-      <p class="text-center text-light">Amaury Butaux</p>
+      <p class="text-center text-light">{{site.title}}</p>
     </footer>
   </div>
 </div>
