--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <nav class="sticky-topbg-light fluid-container">
     <div class="row no-gutters">
         <div class="btn-group col-4 col-md-3">
-        <button type="button" class="btn btn-block btn-light">Amaury Butaux</button>
+        <button type="button" class="btn btn-block btn-light">{{site.title}}</button>
         </div>
         <div class="btn-group col-5 col-md-3">
         <button type="button" class="btn btn-block btn-primary">Game Designer</button>
