--- a/_includes/nav-compact.html
+++ b/_includes/nav-compact.html
@@ -3,7 +3,7 @@
     class="navbar-brand d-flex align-items-center justify-content-end col-lg-3 col">
     <img class="rounded-circle d-inline-block mx-3" width="30" height="30" lt="Profile picture"
       src="{{ "/assets/images/photo_linkedin.webp" | prepend: site.baseurl_root }}" />
-    <h1 class="h5 align-middle px-3 my-auto d-inline-block">Amaury Butaux</h1>
+    <h1 class="h5 align-middle px-3 my-auto d-inline-block">{{ site.title }}</h1>
     <h2 class="h6 align-middle px-0 my-auto d-sm-inline-block d-lg-none d-xxl-inline-block">{% t titles.current-role %}</h2>
   </a>
   <div class="col col-lg-6 px-0">
